--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.11",
+    "@clerk/nextjs": "^5.7.5",
     "@neondatabase/serverless": "^0.10.1",
     "@next/eslint-plugin-next": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.0",
