--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/elements": "^0.16.2",
     "@clerk/nextjs": "^5.7.5",
     "@neondatabase/serverless": "^0.10.1",
     "@next/eslint-plugin-next": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
