new SSo login process

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/elements": "^0.16.2",
     "@clerk/nextjs": "^5.7.5",
+    "@clerk/types": "^4.26.0",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.10.1",
     "@next/eslint-plugin-next": "^14.2.15",
