--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
+    "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts"
   },
   "dependencies": {
     "@clerk/elements": "^0.16.2",
@@ -23,6 +25,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -37,6 +40,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
