--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "^14.2.16",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
+    "luxon": "^3.5.0",
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -50,6 +51,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
