--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@clerk/elements": "^0.16.2",
     "@clerk/nextjs": "^5.7.5",
+    "@clerk/themes": "^2.1.41",
     "@clerk/types": "^4.30.0",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.1",
