update sidebar design adn update clerks new way everywhere

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,33 @@
-DATABASE_URL=
-DATABASE_URL_UNPOOLED=
+# Database Configuration
+# ---------------------
+# Main database connection string
+DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
+# Unpooled database connection for migrations
+DATABASE_URL_UNPOOLED="postgresql://user:password@host/database?sslmode=require"
+# Audit log database for tracking system events
+AUDITLOG_DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
 
-CLERK_SECRET_KEY=
+# Clerk Authentication
+# ------------------
+# Secret key for server-side Clerk operations (get from Clerk Dashboard)
+CLERK_SECRET_KEY="sk_test_xxxxxx"
+# Public key for client-side Clerk operations (get from Clerk Dashboard)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_xxxxxx"
 
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+# Clerk Authentication Routes
+# -------------------------
+# URL for the sign-in page
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
+# URL for the sign-up page
+NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
+# Redirect URL after successful sign-in
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/events"
 
-
-
+# Google OAuth Configuration
+# ------------------------
+# Google OAuth client ID (get from Google Cloud Console)
+GOOGLE_OAUTH_CLIENT_ID="your-client-id.apps.googleusercontent.com"
+# Google OAuth client secret (get from Google Cloud Console)
+GOOGLE_OAUTH_CLIENT_SECRET="your-client-secret"
+# Callback URL for Google OAuth (configure in Clerk Dashboard)
+GOOGLE_OAUTH_REDIRECT_URL="https://your-clerk-frontend-api/v1/oauth_callback"
