--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "use-server": "^0.4.9",
