split name to First and Last Name

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
+    "push": "drizzle-kit push",
+    "studio": "drizzle-kit studio",
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts"
   },
