--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "crons": [
     {
-      "path": "/api/keep-alive?token=$KEEP_ALIVE_TOKEN",
+      "path": "/api/keep-alive?token=$VERCEL_DEPLOYMENT_ID",
       "schedule": "0 0 * * *"
     }
   ]
