--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.8.10",
     "use-server": "^0.4.9",
     "zod": "^3.23.8"
   },
