--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.1.43",
     "@clerk/types": "^4.32.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.10.3",
     "@next/eslint-plugin-next": "^14.2.18",
