--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@tiptap/extension-bullet-list": "^2.10.4",
     "@tiptap/extension-link": "^2.10.4",
     "@tiptap/extension-list-item": "^2.10.4",
@@ -64,6 +66,7 @@
     "react-hook-form": "^7.53.2",
     "react-markdown": "^9.0.1",
     "sonner": "^1.7.0",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.8.10",
