update env examples

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,13 @@ GOOGLE_OAUTH_CLIENT_ID="your-client-id.apps.googleusercontent.com"
 GOOGLE_OAUTH_CLIENT_SECRET="your-client-secret"
 # Callback URL for Google OAuth (configure in Clerk Dashboard)
 GOOGLE_OAUTH_REDIRECT_URL="https://your-clerk-frontend-api/v1/oauth_callback"
+
+# Vercel
+BLOB_READ_WRITE_TOKEN="vercel_blob_"
+CRON_SECRET="vercel_cron_"
+
+# Stripe
+STRIPE_SECRET_KEY=sk_test_
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_
+STRIPE_WEBHOOK_SECRET=whsec_
+
