--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "NODE_NO_WARNINGS=1 next dev",
+    "build": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--openssl-legacy-provider next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
