--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,8 @@ BLOB_READ_WRITE_TOKEN="vercel_blob_"
 CRON_SECRET="vercel_cron_"
 
 # Stripe
-STRIPE_SECRET_KEY=sk_test_
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_
-STRIPE_WEBHOOK_SECRET=whsec_
+STRIPE_SECRET_KEY="sk_test_"
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_"
+STRIPE_WEBHOOK_SECRET="whsec_"
+
 
