--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_NO_WARNINGS=1 next dev",
-    "build": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--openssl-legacy-provider next build",
+    "dev": "next dev --turbo",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -16,7 +16,7 @@
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts"
   },
   "dependencies": {
-    "@clerk/elements": "^0.16.2",
+    "@clerk/elements": "^0.22.12",
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.2.9",
     "@clerk/types": "^4.41.2",
