--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.35.3",
+    "embla-carousel-react": "^8.5.2",
     "eslint-config-next": "^14.2.23",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
+    "motion": "^12.0.1",
     "next": "14.2.15",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
