--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "@types/node-cron": "^3.0.11",
     "@vercel/blob": "^0.27.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,6 +64,7 @@
     "motion": "^12.0.1",
     "next": "14.2.15",
     "next-themes": "^0.4.4",
+    "node-cron": "^3.0.3",
     "nuqs": "^2.3.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
