--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     {
       "path": "/api/keep-alive",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/refresh-tokens",
+      "schedule": "0 * * * *"
     }
   ]
 }
