--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
     },
     {
       "path": "/api/cron/refresh-tokens",
-      "schedule": "0 * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
