--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "@types/node-cron": "^3.0.11",
+    "@upstash/redis": "^1.34.3",
     "@vercel/blob": "^0.27.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
