--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "sonner": "^1.7.2",
