add records page and functionality

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ DATABASE_URL_UNPOOLED="postgresql://user:password@host/database?sslmode=require"
 # Audit log database for tracking system events
 AUDITLOG_DATABASE_URL="postgresql://user:password@host/database?sslmode=require"
 
+# Encryption key for record encryption
+ENCRYPTION_KEY="your-encryption-key"
+
 # Clerk Authentication
 # ------------------
 # Secret key for server-side Clerk operations (get from Clerk Dashboard)
