--- a/package.json
+++ b/package.json
@@ -44,8 +44,15 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tiptap/extension-bullet-list": "^2.11.2",
+    "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-link": "^2.11.2",
     "@tiptap/extension-list-item": "^2.11.2",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-table-cell": "^2.11.5",
+    "@tiptap/extension-table-header": "^2.11.5",
+    "@tiptap/extension-table-row": "^2.11.5",
+    "@tiptap/extension-task-item": "^2.11.5",
+    "@tiptap/extension-task-list": "^2.11.5",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
