--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.35.3",
     "embla-carousel-react": "^8.5.2",
-    "eslint-config-next": "^14.2.23",
+    "eslint-config-next": "^15.1.7",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
     "motion": "^12.0.1",
@@ -100,8 +100,9 @@
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "drizzle-kit": "^0.26.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.20.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
