--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "drizzle-orm": "^0.35.3",
     "embla-carousel-react": "^8.5.2",
     "eslint-config-next": "^15.1.7",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
     "motion": "^12.0.1",
@@ -108,9 +110,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.7.0",
     "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.1",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
