--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@jest/globals": "^29.7.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^29.5.14",
