--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "NODE_NO_WARNINGS=1 next dev --turbopack",
+    "build": "NODE_NO_WARNINGS=1 next build",
+    "start": "NODE_NO_WARNINGS=1 next start",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -22,7 +22,6 @@
     "@clerk/elements": "^0.22.23",
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.2.9",
-    "@clerk/types": "^4.41.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -81,9 +80,9 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-day-picker": "9.5.1",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
@@ -96,6 +95,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@clerk/types": "^4.41.2",
     "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
@@ -104,8 +104,8 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.14",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "drizzle-kit": "^0.26.2",
