create ONBOARD and ADMIN ROLES

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format:check": "prettier --check .",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
+    "run-migrations": "tsx scripts/run-migrations.ts",
+    "test-expert-onboarding": "tsx scripts/test-expert-onboarding.ts",
     "push": "drizzle-kit push",
     "studio": "drizzle-kit studio",
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
@@ -80,6 +82,7 @@
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "9.5.1",
     "react-dom": "^19.0.0",
