--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@clerk/elements": "^0.23.0",
     "@clerk/nextjs": "^6.12.1",
     "@clerk/themes": "^2.2.20",
+    "@clerk/types": "^4.47.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -45,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
+    "@tanstack/react-table": "^8.21.2",
     "@tiptap/extension-bullet-list": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
     "@tiptap/extension-link": "^2.11.5",
@@ -80,6 +82,7 @@
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-day-picker": "9.5.1",
     "react-dom": "^19.0.0",
@@ -95,7 +98,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@clerk/types": "^4.47.0",
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
