--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "nuqs": "^2.4.0",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
+    "react-cookie-manager": "^3.2.0",
     "react-day-picker": "9.5.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
