--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
     "postgres": "^3.4.5",
+    "posthog-js": "^1.225.0",
     "react": "^19.0.0",
     "react-cookie-manager": "^3.2.0",
     "react-day-picker": "9.5.1",
