--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "studio": "drizzle-kit studio",
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts",
+    "migrate:profile-published": "tsx scripts/rename-profile-published.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -45,6 +46,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
