--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
 # URL for the sign-up page
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
 # Redirect URL after successful sign-in
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/events"
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/home"
 
 # Google OAuth Configuration
 # ------------------------
