--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/keep-alive",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/process-expert-transfers?key=$CRON_API_KEY",
+      "schedule": "0 4 * * *"
     }
   ]
 }
