update SSO callback to fix the redirect

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ ENCRYPTION_KEY="your-encryption-key"
 # Clerk Authentication
 # ------------------
 # Secret key for server-side Clerk operations (get from Clerk Dashboard)
-CLERK_SECRET_KEY="sk_test_xxxxxx"
+CLERK_SECRET_KEY=""
 # Public key for client-side Clerk operations (get from Clerk Dashboard)
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_xxxxxx"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 
 # Clerk Authentication Routes
 # -------------------------
@@ -25,6 +25,11 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
 # Redirect URL after successful sign-in
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/home"
+# Redirect URL for unauthorized access
+NEXT_PUBLIC_CLERK_UNAUTHORIZED_URL="/unauthorized"
+# Redirect URLs for Clerk v6 (Core 2)
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL="/dashboard"
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL="/dashboard"
 
 # Google OAuth Configuration
 # ------------------------
@@ -43,5 +48,8 @@ CRON_SECRET="vercel_cron_"
 STRIPE_SECRET_KEY="sk_test_"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_"
 STRIPE_WEBHOOK_SECRET="whsec_"
+
+# App Configuration
+NEXT_PUBLIC_APP_URL="https://yourdomain.com,http://localhost:3000"
 
 
