--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@stripe/react-stripe-js": "^3.4.0",
-    "@stripe/stripe-js": "^6.0.0",
+    "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-table": "^8.21.2",
     "@tiptap/extension-bullet-list": "^2.11.5",
     "@tiptap/extension-highlight": "^2.11.5",
@@ -66,7 +66,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@types/node-cron": "^3.0.11",
     "@upstash/redis": "^1.34.5",
-    "@vercel/blob": "^0.27.2",
+    "@vercel/blob": "^0.27.3",
     "@xstate/react": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -87,9 +87,9 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.1",
     "postgres": "^3.4.5",
-    "posthog-js": "^1.230.2",
+    "posthog-js": "^1.231.0",
     "react": "^19.0.0",
-    "react-cookie-manager": "^3.3.0",
+    "react-cookie-manager": "^3.3.1",
     "react-day-picker": "9.5.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
@@ -109,6 +109,9 @@
     "@eslint/js": "^9.22.0",
     "@jest/globals": "^29.7.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
@@ -119,7 +122,7 @@
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^50.6.6",
+    "eslint-plugin-jsdoc": "^50.6.8",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
