--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/lodash": "^4.17.16",
     "@types/node-cron": "^3.0.11",
     "@upstash/redis": "^1.34.5",
     "@vercel/blob": "^0.27.3",
@@ -87,6 +88,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
     "googleapis": "^144.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.5.0",
     "next": "15.2.2",
