--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,14 @@
     {
       "path": "/api/cron/process-tasks",
       "schedule": "0 4 * * *"
+    },
+    {
+      "path": "/api/cron/process-expert-transfers",
+      "schedule": "0 */2 * * *"
+    },
+    {
+      "path": "/api/cron/check-upcoming-payouts",
+      "schedule": "0 12 * * *"
     }
   ]
 }
