--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts",
     "migrate:profile-published": "tsx scripts/rename-profile-published.ts",
+    "qstash:setup": "node scripts/setup-qstash.js",
+    "qstash:check": "node scripts/check-qstash-env.js",
+    "qstash:debug": "node scripts/debug-env-loading.js",
+    "qstash:env": "node scripts/setup-env-vars.js",
+    "qstash:test": "node scripts/test-qstash-connection.js",
+    "qstash:update": "NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts",
+    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts || echo 'QStash setup skipped'",
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
@@ -72,6 +79,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@types/lodash": "^4.17.16",
     "@types/node-cron": "^3.0.11",
+    "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.5",
     "@vercel/blob": "^0.27.3",
     "@xstate/react": "^5.0.3",
