imporve QStash imenetation v1

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "auditdb:generate": "drizzle-kit generate --config audit.config.ts",
     "auditdb:migrate": "drizzle-kit migrate --config audit.config.ts",
     "migrate:profile-published": "tsx scripts/rename-profile-published.ts",
-    "qstash:setup": "node scripts/setup-qstash.js",
-    "qstash:check": "node scripts/check-qstash-env.js",
-    "qstash:debug": "node scripts/debug-env-loading.js",
-    "qstash:env": "node scripts/setup-env-vars.js",
-    "qstash:test": "node scripts/test-qstash-connection.js",
-    "qstash:update": "NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts",
+    "qstash:setup": "node --input-type=module scripts/setup-qstash.js",
+    "qstash:check": "node --input-type=module scripts/check-qstash-env.js",
+    "qstash:debug": "node --input-type=module scripts/debug-env-loading.js",
+    "qstash:env": "node --input-type=module scripts/setup-env-vars.js",
+    "qstash:test": "node --input-type=module scripts/test-qstash-connection.js",
+    "qstash:update": "tsx scripts/update-qstash-schedules.ts",
     "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts || echo 'QStash setup skipped'",
     "test": "jest",
     "test:unit": "jest tests/unit",
