--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-email/components": "^0.0.35",
+    "@react-email/render": "^1.0.5",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-table": "^8.21.2",
@@ -112,6 +114,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.1.0",
+    "resend": "^4.2.0",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
