--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.35.3",
+    "dub": "^0.61.5",
     "embla-carousel-react": "^8.5.2",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
