--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@clerk/elements": "^0.23.2",
-    "@clerk/nextjs": "^6.12.5",
-    "@clerk/themes": "^2.2.21",
-    "@clerk/types": "^4.48.0",
+    "@clerk/elements": "^0.23.18",
+    "@clerk/nextjs": "^6.18.0",
+    "@clerk/themes": "^2.2.36",
+    "@clerk/types": "^4.55.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -43,46 +43,46 @@
     "@neondatabase/serverless": "^0.10.4",
     "@next/eslint-plugin-next": "15.1.7",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-email/components": "^0.0.35",
-    "@react-email/render": "^1.0.5",
-    "@stripe/react-stripe-js": "^3.4.0",
+    "@react-email/render": "^1.0.6",
+    "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^6.1.0",
-    "@tanstack/react-table": "^8.21.2",
-    "@tiptap/extension-bullet-list": "^2.11.5",
-    "@tiptap/extension-highlight": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-list-item": "^2.11.5",
-    "@tiptap/extension-table": "^2.11.5",
-    "@tiptap/extension-table-cell": "^2.11.5",
-    "@tiptap/extension-table-header": "^2.11.5",
-    "@tiptap/extension-table-row": "^2.11.5",
-    "@tiptap/extension-task-item": "^2.11.5",
-    "@tiptap/extension-task-list": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
+    "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-bullet-list": "^2.11.7",
+    "@tiptap/extension-highlight": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-list-item": "^2.11.7",
+    "@tiptap/extension-table": "^2.11.7",
+    "@tiptap/extension-table-cell": "^2.11.7",
+    "@tiptap/extension-table-header": "^2.11.7",
+    "@tiptap/extension-table-row": "^2.11.7",
+    "@tiptap/extension-task-item": "^2.11.7",
+    "@tiptap/extension-task-list": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/lodash": "^4.17.16",
     "@types/node-cron": "^3.0.11",
-    "@upstash/qstash": "^2.7.22",
-    "@upstash/redis": "^1.34.5",
+    "@upstash/qstash": "^2.7.23",
+    "@upstash/redis": "^1.34.8",
     "@vercel/blob": "^0.27.3",
     "@xstate/react": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -90,10 +90,10 @@
     "core-js": "^3.41.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.35.3",
-    "dub": "^0.61.5",
-    "embla-carousel-react": "^8.5.2",
+    "dub": "^0.61.8",
+    "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -101,51 +101,52 @@
     "googleapis": "^144.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
-    "motion": "^12.5.0",
-    "next": "15.2.2",
+    "motion": "^12.9.2",
+    "next": "15.3.1",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
-    "nuqs": "^2.4.1",
+    "nuqs": "^2.4.3",
     "postgres": "^3.4.5",
-    "posthog-js": "^1.231.0",
-    "react": "^19.0.0",
+    "posthog-js": "^1.236.7",
+    "react": "^19.1.0",
     "react-confetti": "^6.4.0",
-    "react-cookie-manager": "^3.3.1",
+    "react-cookie-manager": "^3.7.2",
     "react-day-picker": "9.5.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.1",
     "react-markdown": "^9.1.0",
-    "resend": "^4.2.0",
-    "sonner": "^2.0.1",
+    "resend": "^4.4.1",
+    "sonner": "^2.0.3",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.8.10",
     "use-server": "^0.4.9",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
     "@jest/globals": "^29.7.0",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.15.2",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "drizzle-kit": "^0.26.2",
-    "eslint": "^9.22.0",
+    "eslint": "^9.25.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^50.6.8",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-jsdoc": "^50.6.11",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -153,12 +154,12 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.0",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "overrides": {
     "punycode": "^2.3.1"
