--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,10 @@
     "target": "ES2017",
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "allowArbitraryExtensions": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.json"],
   "exclude": ["node_modules", "tests/**/*"],
   "ts-node": {
     "compilerOptions": {
