--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@neondatabase/serverless": "^0.10.4",
     "@next/eslint-plugin-next": "15.1.7",
+    "@next/mdx": "^15.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -80,6 +83,7 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "@types/lodash": "^4.17.16",
+    "@types/mdx": "^2.0.13",
     "@types/node-cron": "^3.0.11",
     "@upstash/qstash": "^2.7.23",
     "@upstash/redis": "^1.34.8",
