try to centralize contente folder

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ yarn-error.log*
 next-env.d.ts
 /cal.com
 _backup_.env
+
+# content collections
+/.content-collections/
+# Add Content Collections to .gitignore
