centralized fileLocale name

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_NO_WARNINGS=1 next dev --turbopack",
+    "dev": "NODE_NO_WARNINGS=1 next dev",
     "build": "NODE_NO_WARNINGS=1 next build",
     "build:force": "NODE_NO_WARNINGS=1 NEXT_SKIP_TYPESCRIPT_CHECK=1 next build",
     "start": "NODE_NO_WARNINGS=1 next start",
