--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@upstash/qstash": "^2.7.23",
     "@upstash/redis": "^1.34.8",
     "@vercel/blob": "^0.27.3",
+    "@vercel/speed-insights": "^1.2.0",
     "@xstate/react": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
