--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@clerk/elements": "^0.23.18",
+    "@clerk/localizations": "^3.15.2",
     "@clerk/nextjs": "^6.18.0",
     "@clerk/themes": "^2.2.36",
     "@clerk/types": "^4.55.1",
