--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@tremor/react": "^3.18.7",
     "@types/lodash": "^4.17.16",
     "@types/mdx": "^2.0.13",
     "@types/node-cron": "^3.0.11",
@@ -136,6 +137,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.25.1",
     "@jest/globals": "^29.7.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
