--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "core-js": "^3.41.0",
+    "cron-validator": "^1.3.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
