--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@neondatabase/serverless": "^0.10.4",
     "@next/eslint-plugin-next": "15.1.7",
     "@next/mdx": "^15.3.1",
-    "@novu/headless": "^2.6.6",
-    "@novu/node": "^2.6.6",
-    "@novu/react": "^3.5.0",
+    "@novu/api": "^1.2.0",
+    "@novu/framework": "^2.6.7",
+    "@novu/nextjs": "^3.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
