--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@clerk/elements": "^0.23.18",
     "@clerk/localizations": "^3.15.2",
-    "@clerk/nextjs": "^6.18.0",
+    "@clerk/nextjs": "^6.20.2",
     "@clerk/themes": "^2.2.36",
     "@clerk/types": "^4.55.1",
     "@dnd-kit/core": "^6.3.1",
@@ -114,7 +114,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.9.2",
-    "next": "15.3.1",
+    "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
@@ -131,6 +131,7 @@
     "resend": "^4.4.1",
     "sonner": "^2.0.3",
     "stripe": "^17.7.0",
+    "svix": "^1.66.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.8.10",
