--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "nuqs": "^2.4.3",
     "postgres": "^3.4.5",
     "posthog-js": "^1.236.7",
+    "posthog-node": "^4.18.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-cookie-manager": "^3.7.2",
