create POSTHOG dashboards

--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "test:e2e": "jest tests/e2e",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "setup:posthog-dashboards": "node scripts/setup-posthog-dashboards.js",
+    "posthog:dashboards": "npm run setup:posthog-dashboards",
+    "test:posthog": "node scripts/test-posthog-connection.js",
+    "test:posthog-env": "node scripts/test-env-visibility.js",
+    "validate:posthog-permissions": "node scripts/validate-posthog-permissions.js"
   },
   "dependencies": {
     "@clerk/elements": "^0.23.18",
