fix configuration posthog dashboard and Novu Workflows

--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "dub": "^0.61.8",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "15.1.7",
-    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
     "googleapis": "^144.0.0",
@@ -175,6 +174,8 @@
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.4.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsdoc": "^50.6.11",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
