fix: resolve ESLint no-unused-vars errors in Novu implementation

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "test:novu": "node -r dotenv/config scripts/test-novu-connection.js",
     "test:novu-permissions": "node -r dotenv/config scripts/test-novu-connection.js --permissions",
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
+    "test:novu-workflow": "node scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url $NOVU_BRIDGE_URL --secret-key $NOVU_SECRET_KEY --api-url $NOVU_BASE_URL",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
