feat: Add comprehensive email template testing infrastructure
- Add /api/test-email endpoint for browser and API testing
- Create comprehensive test script with 7 different scenarios
- Integrate Resend test addresses (delivered, bounced, complained)
- Support all template variants, languages, and accessibility modes
- Add complete testing documentation in EMAIL_TESTING_GUIDE.md
- Fix React.createElement children prop ESLint warnings

Features:
✅ Browser testing with query parameters
✅ CLI/curl testing capabilities
✅ Comprehensive script testing (pnpm test:email)
✅ All template variants (default, minimal, branded)
✅ Accessibility testing (dark mode, high contrast)
✅ Multilingual support (en, es, pt, br)
✅ User role testing (patient, expert, admin)
✅ Email type testing (welcome, expert, appointment, payment)
✅ Delivery testing (success, bounce, spam simulation)
✅ Analytics and monitoring via Resend dashboard

Related: ELEVA-32

--- a/package.json
+++ b/package.json
@@ -54,7 +54,14 @@
     "build:analyze": "cross-env ANALYZE=true pnpm build",
     "build:debug": "NODE_OPTIONS='--inspect' pnpm build",
     "build:profile": "pnpm build --profile",
-    "build:memory": "pnpm build --experimental-debug-memory-usage"
+    "build:memory": "pnpm build --experimental-debug-memory-usage",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "type-check": "tsc --noEmit",
+    "test:email": "node scripts/test-email-templates.js",
+    "email:dev": "email dev",
+    "email:export": "email export"
   },
   "dependencies": {
     "@clerk/elements": "^0.23.18",
