🚨 CRITICAL FIX: Correct Connect account payout configuration
🔧 Fixed major business logic issue:
- Connect accounts were using automatic daily payouts
- This bypassed appointment completion validation
- Experts received money immediately, not after appointments

✅ Changes:
- Set new Connect accounts to manual payouts (lib/stripe.ts)
- Created script to fix existing accounts (scripts/fix-connect-payout-schedules.ts)
- Added npm run fix-connect-payouts command

🎯 Impact:
- Payouts now controlled by process-pending-payouts cron
- Proper 24-hour complaint window enforced
- Business logic aligned with appointment completion

⚠️ Next Steps:
1. Run: npm run fix-connect-payouts (to fix existing accounts)
2. Monitor process-pending-payouts cron logs
3. Verify manual payouts trigger after appointments

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qstash:env": "node --input-type=module scripts/setup-env-vars.js",
     "qstash:test": "node --input-type=module scripts/test-qstash-connection.js",
     "qstash:update": "tsx scripts/update-qstash-schedules.ts",
+    "fix-connect-payouts": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/fix-connect-payout-schedules.ts",
     "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/update-qstash-schedules.ts || echo 'QStash setup skipped'",
     "cleanup:duplicates": "NODE_NO_WARNINGS=1 tsx scripts/cleanup-duplicate-reservations.ts",
     "cleanup:cache": "node -r dotenv/config node_modules/.bin/tsx scripts/cleanup-payment-rate-limit-cache.ts",
