🚀 MIGRATION: HTML to Markdown Storage for Maximum Scalability
✅ CONTEXT7 BEST PRACTICES IMPLEMENTED:
Following SSW Rules + Tiptap documentation recommendations for content storage

🔄 BOTH EDITORS MIGRATED:
✅ RichTextEditor.tsx: Now stores Markdown instead of HTML
✅ RecordEditor.tsx: Now stores Markdown instead of HTML

📊 SCALABILITY IMPROVEMENTS:
- Platform Agnostic: Content works everywhere, not just web browsers
- Smaller Storage: Markdown is more compact than HTML
- Human Readable: Easy to debug, migrate, and version control
- Future Proof: Never becomes obsolete like proprietary formats
- AI/LLM Optimized: Perfect for modern AI integrations
- Git Friendly: Excellent diffs and version control

🔧 TECHNICAL IMPLEMENTATION:
- Added @tiptap/static-renderer for Markdown conversion
- Added marked for Markdown parsing to HTML
- Removed incompatible tiptap-markdown (Tiptap 3.x issue)
- Content flow: Database(Markdown) → HTML(Display) → Markdown(Save)
- Preserved cursor position during autosave
- Maintained Vercel Blob image upload functionality
- Fallback to HTML if Markdown conversion fails

📝 CONTENT FLOW:
1. STORAGE: PostgreSQL stores Markdown (clean, portable)
2. DISPLAY: Convert Markdown → HTML for rich editing
3. EDITING: User edits in HTML mode with full features
4. SAVE: Convert HTML → Markdown for database storage

🎯 RESULT:
✅ More scalable content architecture
✅ Platform-independent medical records
✅ Better database performance (smaller content)
✅ Future-proof for API integrations
✅ Perfect for headless CMS scenarios

Next: Create migration for existing HTML → Markdown content 📦

--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "@tiptap/pm": "^3.1.0",
     "@tiptap/react": "^3.1.0",
     "@tiptap/starter-kit": "^3.1.0",
+    "@tiptap/static-renderer": "^3.1.0",
     "@types/lodash": "^4.17.16",
     "@types/mdx": "^2.0.13",
     "@types/node-cron": "^3.0.11",
@@ -160,6 +161,7 @@
     "isomorphic-dompurify": "^2.25.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
+    "marked": "^16.1.2",
     "motion": "^12.9.2",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
@@ -183,7 +185,6 @@
     "svix": "^1.66.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tiptap-markdown": "^0.8.10",
     "use-server": "^0.4.9",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
