🔧 ENHANCEMENT: Add Novu Sync Scripts for Development and Production
✅ CHANGES MADE:
- Introduced new scripts in package.json for syncing Novu in different environments:
  - `novu:sync:dev`: Syncs with the local development environment.
  - `novu:sync:prod`: Syncs with the production environment using a bash command.
  - `novu:sync:preview`: Syncs with the Vercel preview environment.

🎯 RESULT:
✅ Improved flexibility for developers to manage Novu synchronization across various environments, enhancing the deployment workflow.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
     "test:novu-workflow": "node -r dotenv/config scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
+    "novu:sync:dev": "node -r dotenv/config node_modules/.bin/novu sync --bridge-url \"http://localhost:3000/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
+    "novu:sync:prod": "bash -c 'source .env && NOVU_SECRET_KEY=\"$NOVU_SECRET_KEY_PROD\" npx novu@latest sync --bridge-url \"https://eleva.care/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:preview": "node -r dotenv/config node_modules/.bin/novu sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
     "novu:clean": "node scripts/clean-novu-workflows.js",
     "test:workflows": "node -r dotenv/config scripts/test-novu-workflows-with-data.js",
     "analyze": "ANALYZE=true pnpm build",
@@ -218,6 +221,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.2",
     "ngrok": "5.0.0-beta.2",
+    "novu": "^2.6.6",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
